# xts-summary

./: Checklist  README.md  diff - two.html  diff-1.html  diff.html  diff_test_output.html  diff_test_output5.html  full.html  left.html  out.html  pyproject.toml  release.sh  requirements.txt  right.html  summary-tool  test_diff.html  test_output.html  xts-diff.html  xts-diff_summary.html  xts-summary  xts_summary.html
.github/workflows/: release.yml
diff_tool/: __init__.py  cli.py  comparer.py  extractor.py  html_report-1.py  html_report.py  utils.py
diff_tool/__pycache__/: html_report.cpython-312.pyc.2260522576336  html_report.cpython-312.pyc.2355157084624  html_report.cpython-312.pyc.2382464428496  html_report.cpython-312.pyc.2541960833488  html_report.cpython-312.pyc.2584289552848
diff_tool/templates/: report.html
summary_tool/: cli.py  html_report.py  xts-diff_summary.html  xts_summary.html
summary_tool.egg-info/: PKG-INFO  SOURCES.txt
summary_tool/tmp_diff_reports/: cts_2.html  sts_1.html  sts_2.html  tv_ts_1.html  vts_1.html
tmp_diff_reports/: cts-diff.html  cts_1.html  cts_2.html  ctsongsi-diff.html  ctsongsi_1.html  ctsongsi_2.html  gts-diff.html  gts_1.html  sts-diff.html  sts_1.html  sts_2.html  tv_ts-diff.html  tv_ts_1.html  vts-diff.html  vts_1.html
